--- a/index.html
+++ b/index.html
@@ -401,101 +401,36 @@ header > .login-form.phase-3 > .phaseless-content
         <a class="button first last" id="no-xr-button" disabled style="display: none;">No XR</a>
       </div>
     </div>
-    <script type=module>
-// import './webxr-polyfill.module.js';
-// import './HelioWebXRPolyfill.js';
-import ew from 'https://web2.exokit.org/ew.js';
-// import ew from './exokit-web/ew.js';
+    <script>
 
-let contract = null;
-window.addEventListener('load', async () => {
-  // Modern dapp browsers...
-  if (window.ethereum) {
-      window.web3 = new window.top.Web3(ethereum);
-      try {
-          // Request account access if needed
-          await window.ethereum.enable();
-          // Acccounts now exposed
-          // web3.eth.sendTransaction({/* ... */});
-      } catch (error) {
-          // User denied account access...
-      }
-  }
-  // Legacy dapp browsers...
-  else if (window.web3) {
-      window.web3 = new window.Web3(window.web3.currentProvider);
-      // Acccounts always exposed
-      // web3.eth.sendTransaction({/* ... */});
-  }
-  // Non-dapp browsers...
-  else {
-      console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-  }
-
-  const ress = await Promise.all([
-    fetch('abi.json'),
-    fetch('address.json'),
-  ]);
-  const [jsonInterface, address] = await Promise.all(ress.map(res => res.json()));
-  contract = web3.eth.contract(jsonInterface).at(address);
-  window.contract = contract; // XXX
-});
-window.document.addEventListener('dragover', e => {
-  e.preventDefault();
-});
-
-window.xrEngine = null;
 (async () => {
-  const enterXrButton = document.getElementById('enter-xr-button');
-  const noXrButton = document.getElementById('no-xr-button');
-  let result;
-  if (navigator.xr) {
-    try {
-      await navigator.xr.isSessionSupported('immersive-vr');
-      result = true;
-    } catch (err) {
-      console.warn(err);
-      result = false;
+  const res = await fetch(`https://content.exokit.org/users/avaer`);
+  const root = await res.json();
+
+  const files = [];
+  const hashes = [];
+  let keypath = '';
+  const _recurse = node => {
+    keypath += (keypath ? '/' : '') + node.name;
+
+    if (node.hash) {
+      files.push(keypath);
+      hashes.push(node.hash);
     }
-  } else {
-    result = false;
-  }
-  if (result) {
-    console.log('xr available');
-    enterXrButton.style.display = null;
-  } else {
-    console.log('no xr');
-    noXrButton.style.display = null;
-  }
+    if (node.children) {
+      for (let i = 0; i < node.children.length; i++) {
+        _recurse(node.children[i]);
+      }
+    }
+  };
+  _recurse(root);
 
-  await ew.register();
-
-  const xrEngine = new XREngine();
-  xrEngine.src = 'app.html';
-  /* xrEngine.addEventListener('message', async e => {
-    const {data} = e;
-    const {method} = data;
-  }); */
-  const iframeWrapper = document.getElementById('iframe-wrapper');
-  iframeWrapper.appendChild(xrEngine);
-
-  xrEngine.addEventListener('canvas', e => {
-    /* const canvas = e.data;
-    console.log('got canvas', canvas);
-
-    document.body.appendChild(canvas); */
-
-    [
-      'enter-xr-button',
-    ].forEach(id => {
-      const el = document.getElementById(id);
-      el.addEventListener('click', async () => {
-        await xrEngine.enterXr();
-      });
-    });
-  });
-
-  window.xrEngine = xrEngine;
+  document.getElementById('iframe-wrapper').innerHTML = files.map((file, i) =>
+    `<a href="https://viewer.exokit.org/${hashes[i]}" class=a-file>
+      <img src="https://content.exokit.org/preview/${hashes[i]}" height=100>
+      <span>${file}</span>
+    </a>`
+  ).join('\n');
 })();
     </script>
   </body>
