--- a/index.html
+++ b/index.html
@@ -429,7 +429,10 @@ header > .login-form.phase-3 > .phaseless-content
         </form>
       </header>
 
-      <div id="nav-popout">
+      <div id="nav-popout"> 
+
+      </div>
+      
       <div class="cardContainer" id="cardContainer">
 
       </div>
