hold off on meta tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Exokit, WebXR, VR, Cryptocurrency, JavaScript, Metamask, Metaverse">
+  <!-- <meta name="keywords" content="Exokit, WebXR, VR, Cryptocurrency, JavaScript, Metamask, Metaverse">
   <meta name="description" content="Store WebXR content in a Ethereum blockchain made for the Web.">
-  <meta name="author" content="Exokit">
+  <meta name="author" content="Exokit"> -->
 </head>
 
 <body>
