--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       // Handle logo click, open nav-popout
       document.getElementById("logo").addEventListener("click", (e) => {
         const navPopout = document.getElementById('nav-popout');
-        if (document.activeElement == navPopout) {
+        if (document.activeElement === navPopout) {
           navPopout.blur()
         }
         else {
