--- a/index.html
+++ b/index.html
@@ -1,222 +1,58 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="store.css">
+    <link rel="stylesheet" type="text/css" href="common.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./exobot.png" type="image/png">
+    <title>Exokit | Store</title>
+    <!-- <meta name="keywords" content="Exokit, WebXR, VR, Cryptocurrency, JavaScript, Metamask, Metaverse">
+    <meta name="description" content="Store WebXR content in a Ethereum blockchain made for the Web.">
+    <meta name="author" content="Exokit"> -->
+  </head>
+  <body>
 
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./exobot.png" type="image/png">
-  <title>Exokit | Store</title>
-  <!-- <meta name="keywords" content="Exokit, WebXR, VR, Cryptocurrency, JavaScript, Metamask, Metaverse">
-  <meta name="description" content="Store WebXR content in a Ethereum blockchain made for the Web.">
-  <meta name="author" content="Exokit"> -->
-</head>
+    <header>
+      <img src="logo.svg" class="icon grow" id="logo">
+      <nav class="selected">
+        <span>Store</span>
+      </nav>
+      <form class="login-form phase-1" id="login-form">
+        <div class="phase-content">
+          <div class="login-notice" id="login-notice"></div>
+          <div class="login-error" id="login-error"></div>
+        </div>
+        <div class="phase-content phase-1-content">
+          <input type="email" placeholder="your@email.com" id="login-email">
+          <input type="submit" value="Log in" class="button highlight">
+        </div>
+        <div class="phase-content phase-2-content">
+          <input type="text" placeholder="Verification code" id="login-verification-code">
+          <input type="submit" value="Verify" class="button highlight">
+        </div>
+        <div class="phase-content phase-3-content">
+          <button class="user-button" id="user-button">
+            <img src="exobot.png">
+            <span class="name" id="login-email-static">a@modules.io</span>
+          </button>
+          <input type="submit" value="Log out" class="button highlight">
+        </div>
+        <div class="phase-content phaseless-content">
+          <div>Working...</div>
+        </div>
+      </form>
+    </header>
 
-<body>
-  <header>
-    <img src="logo.svg" class="icon grow" id="logo">
-    <nav class="selected">
-      <span>Store</span>
-    </nav>
-    <form class="login-form phase-1" id="login-form">
-      <div class="phase-content">
-        <div class="login-notice" id="login-notice"></div>
-        <div class="login-error" id="login-error"></div>
-      </div>
-      <div class="phase-content phase-1-content">
-        <input type="email" placeholder="your@email.com" id="login-email">
-        <input type="submit" value="Log in" class="button highlight">
-      </div>
-      <div class="phase-content phase-2-content">
-        <input type="text" placeholder="Verification code" id="login-verification-code">
-        <input type="submit" value="Verify" class="button highlight">
-      </div>
-      <div class="phase-content phase-3-content">
-        <button class="user-button" id="user-button">
-          <img src="exobot.png">
-          <span class="name" id="login-email-static">a@modules.io</span>
-        </button>
-        <input type="submit" value="Log out" class="button highlight">
-      </div>
-      <div class="phase-content phaseless-content">
-        <div>Working...</div>
-      </div>
-    </form>
-  </header>
+    <div id="nav-popout" tabindex="1"></div>
 
-  <div id="nav-popout" tabindex="1"></div>
+    <div class="cardContainer" id="cardContainer"></div>
 
-  <div class="cardContainer" id="cardContainer"></div>
+    <div id="metamaskWarning">
+      <img id="metamaskImg" src="./metamask.png">
+      <h3><a href="https://metamask.io/" target="_blank">Metamask Extension</a> required to use Exokit Store.</h3>
+    </div>
 
-  <div id="metamaskWarning">
-    <img id="metamaskImg" src="./metamask.png">
-    <h3><a href="https://metamask.io/" target="_blank">Metamask Extension</a> required to use Exokit Store.</h3>
-  </div>
+    <script type="module" src="store.js"> </script>
 
-  <script>
-    (async () => {
-
-      const metamaskWarning = document.getElementById("metamaskWarning");
-
-      const contract = await new Promise((accept, reject) => {
-
-        window.addEventListener('load', async () => {
-
-          const accessContract = async (web3) => {
-            window.web3 = web3;
-            const ress = await Promise.all([
-              fetch('abi.json'),
-              fetch('address.json'),
-            ]);
-            const [jsonInterface, address] = await Promise.all(ress.map(res => res.json()));
-            return web3.eth.contract(jsonInterface).at(address);
-          }
-
-          let contract = null;
-
-          // Modern dapp browsers...
-          if (window.ethereum) {
-            try {
-              // Request account access if needed
-              await window.ethereum.enable();
-              contract = await accessContract(new window.top.Web3(ethereum))
-
-            } catch (error) {
-                metamaskWarning.style.display = "block";
-                console.warn("User denied access to Metamask account.")
-            }
-          }
-          // Legacy dapp browsers...
-          else if (window.web3) {
-            contract = await accessContract(new window.Web3(window.web3.currentProvider))
-          }
-          // Non-dapp browsers...
-          else {
-            metamaskWarning.style.display = "block";
-            console.warn("Non-Ethereum browser detected. You should consider trying MetaMask!")
-          }
-          if(contract){
-            accept(contract)
-          }
-          else{
-            reject(new Error("No contract"))
-          }
-        });
-      });
-
-      const res = await fetch(`https://content.exokit.org/users/avaer`);
-      const root = await res.json();
-
-      const files = [];
-      const hashes = [];
-      let keypath = '';
-      const _recurse = node => {
-        keypath += (keypath ? '/' : '') + node.name;
-
-        if (node.hash) {
-          files.push(keypath);
-          hashes.push('0x' + node.hash);
-        }
-        if (node.children) {
-          for (let i = 0; i < node.children.length; i++) {
-            _recurse(node.children[i]);
-          }
-        }
-      };
-      _recurse(root);
-      const ids = await Promise.all(hashes.map(hash => new Promise((accept, reject) => {
-        // const hash = '0x' + filename.match(/([^\/]*)$/)[1];
-        contract.getId(hash, (err, id) => {
-          if (!err) {
-            accept(id.toNumber());
-          } else {
-            reject(err);
-          }
-        });
-      })));
-
-      // Define links for popout-nav
-      const navLinks = [
-        {
-          url: "https://store.exokit.org/",
-          title: "Store",
-          active: window.location.host.split(".")[0] === "store"
-        },
-        {
-          url: "https://avatars.exokit.org/",
-          title: "Avatars",
-          active: window.location.host.split(".")[0] === "avatars"
-        },
-        {
-          url: "https://multiplayer.exokit.org/",
-          title: "Multiplayer",
-          active: window.location.host.split(".")[0] === "multiplayer"
-        },
-        {
-          url: "https://editor.exokit.org/",
-          title: "Editor",
-          active: window.location.host.split(".")[0] === "editor"
-        },
-        {
-          url: "https://exokit.org/",
-          title: "Home",
-          active: window.location.host.split(".")[0] === "exokit"
-        }
-      ]
-
-      // Populate nav-popout with links
-      document.getElementById('nav-popout').innerHTML = navLinks.map((link, index) => {
-        return `
-          <div>
-            <a href=${link.url} class=${link.active ? "activeNav" : ""}>${link.title}</a>
-          </div>
-        `
-      }).join(`<br/>`)
-
-      // Close nav-popout if user clicks away
-      document.getElementById("nav-popout").addEventListener("blur", (e) => {
-        const navPopout = document.getElementById('nav-popout');
-        // wait for <a> to fire
-        setTimeout(() => {
-          navPopout.style.display = "none"
-        }, 100)
-      })
-
-      // Handle logo click, open nav-popout
-      document.getElementById("logo").addEventListener("click", (e) => {
-        const navPopout = document.getElementById('nav-popout');
-        if (document.activeElement === navPopout) {
-          navPopout.blur()
-        }
-        else {
-          navPopout.style.display = "block";
-          navPopout.focus()
-        }
-      })
-
-      document.getElementById("logo").addEventListener("mousedown", (e) => {
-        e.preventDefault()
-      })
-
-      // Populate cardContainer with cards
-      document.getElementById('cardContainer').innerHTML = files.map((file, i) => {
-        const rawHash = hashes[i].slice(2);
-        const id = ids[i];
-        return `
-          <div class="app-card">
-            <img src="https://content.exokit.org/preview/${rawHash}" height=100>
-            <div class="cardLink">
-              <a href="https://viewer.exokit.org/${rawHash}">${file}</a>
-            </div>
-            <div class="openSeaBtn">
-              <a href="https://rinkeby.opensea.io/assets/${contract.address}/${id}" class="button first last external-link-button">OpenSea</a>
-            </div>
-          </div>
-        `
-      }).join('\n');
-
-    })();
-
-  </script>
-</body>
-
+  </body>
 </html>
