Basic login and verify

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="phase-content phase-3-content">
           <button class="user-button" id="user-button">
             <img src="exobot.png">
-            <span class="name" id="login-email-static">a@modules.io</span>
+            <span class="name" id="login-email-static"></span>
           </button>
           <input type="submit" value="Log out" class="button highlight">
         </div>
