auto login on page load

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="exobot.png">
             <span class="name" id="login-email-static"></span>
           </button>
-          <input type="submit" value="Log out" class="button highlight">
+          <input type="submit" value="Log out" class="button highlight" id="logout">
         </div>
         <div class="phase-content phaseless-content">
           <div>Working...</div>
